Implement `super`, refactor